test/corpus/function/builtin.txt
================================================================================
Absolute
================================================================================

ASSIGN
  abs = ABSOLUTE(value).

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (identifier))))))

================================================================================
Add interval
================================================================================

ASSIGN
  dt = ADD-INTERVAL(TODAY, 1, "MONTHS").

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (builtin_function)
          (integer_literal)
          (character_literal))))))

================================================================================
Alias
================================================================================

ASSIGN
  name = ALIAS(2).

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (integer_literal))))))

================================================================================
Asc
================================================================================

ASSIGN
  chr = ASC(123).

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (integer_literal))))))

================================================================================
Audit enabled
================================================================================

ASSIGN
  audit = AUDIT-ENABLED(sportsdb).

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (identifier))))))

================================================================================
Base64 Encode/Decode
================================================================================

ASSIGN
  data = BASE64-ENCODE(memptr)
  memptr = BASE64-DECODE(data).

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (identifier))))
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (identifier))))))

================================================================================
Box
================================================================================

ASSIGN
  data = BOX(123, "UNSIGNED-BYTE").

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (integer_literal)
          (character_literal))))))

================================================================================
Buffer Functions
================================================================================
ASSIGN
  result = BUFFER-GROUP-ID("name")
  result = BUFFER-GROUP-NAME("name")
  result = BUFFER-PARTITION-ID("name")
  result = BUFFER-TENANT-ID("name")
  result = BUFFER-TENANT-NAME("name").

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (character_literal))))
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (character_literal))))
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (character_literal))))
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (character_literal))))
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (character_literal))))))

================================================================================
Entry
================================================================================

ASSIGN
  item = ENTRY(i, value)
  ENTRY(1, cTest) = "".

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (identifier)
          (identifier))))
    (assignment_expression
      (builtin_function
        (argument_list
          (integer_literal)
          (identifier)))
      (character_literal))))

================================================================================
Fill
================================================================================

ASSIGN
  trash = FILL(crap, 420).

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (identifier)
          (integer_literal))))))

================================================================================
Index
================================================================================

ASSIGN
  i = INDEX(value, "#").

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (identifier)
          (character_literal))))))

================================================================================
Length
================================================================================

ASSIGN
  size = LENGTH(value).

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (identifier))))))

================================================================================
Num entries
================================================================================

ASSIGN
  entries = NUM-ENTRIES(value).

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (identifier))))))

================================================================================
Replace
================================================================================

ASSIGN
  stuff = REPLACE(bad, "[token]", value).

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (identifier)
          (character_literal)
          (identifier))))))

================================================================================
Substring
================================================================================

ASSIGN
  part1 = SUBSTRING(value, 1)
  part2 = SUBSTRING(value, 7, 11)
  SUBSTRING(value, 7, 11) = newValue.

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (identifier)
          (integer_literal))))
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (identifier)
          (integer_literal)
          (integer_literal))))
    (assignment_expression
      (builtin_function
        (argument_list
          (identifier)
          (integer_literal)
          (integer_literal)))
      (identifier))))

================================================================================
Valid event
================================================================================

ASSIGN
  valid = VALID-EVENT(hHandle, "Open", "GUI").

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (identifier)
          (character_literal)
          (character_literal))))))

================================================================================
Valid handle
================================================================================

ASSIGN
  valid = VALID-HANDLE(hHandle).

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (identifier))))))

================================================================================
Valid object
================================================================================

ASSIGN
  valid = VALID-OBJECT(obj).

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (identifier))))))

================================================================================
Weekday
================================================================================

ASSIGN
  iWeekday = WEEKDAY(TODAY).

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (builtin_function))))))

================================================================================
Widget handle
================================================================================

ASSIGN
  hHandle = WIDGET-HANDLE(cHandleString).

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (identifier))))))

================================================================================
Year
================================================================================

ASSIGN
  iYear = YEAR(TODAY).

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (builtin_function))))))

================================================================================
Accumulate
================================================================================

ASSIGN
  count = ACCUMULATE COUNT table.field.

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function
        (identifier)))))

================================================================================
Ambiguos
================================================================================

ASSIGN
  ambg = AMBIGUOS table
  ambg = AMBIGUOS(other_table).

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression (identifier)
      (builtin_function (identifier)))
    (assignment_expression (identifier)
      (builtin_function (identifier)))))

================================================================================
Statement Functions
================================================================================

ASSIGN
  avail = AVAILABLE table
  avail = AVAILABLE(other_table).

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression (identifier)
      (builtin_function (identifier)))
    (assignment_expression (identifier)
      (builtin_function (identifier)))))

================================================================================
UserID Function
================================================================================

ASSIGN cUser = USERID.

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function))))

================================================================================
UserID DBName Function
================================================================================

ASSIGN cUser = USERID("DICTDB").

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    (assignment_expression
      (identifier)
      (builtin_function
        (argument_list
          (character_literal))))))
