test/corpus/statement/expression_statement.txt
================================================================================
Expression Statement
================================================================================

1 + 1.

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (binary_expression
      (integer_literal)
      (integer_literal))))

================================================================================
Assignment Expression
================================================================================

a = 1.
b = 1 = 1.
b = NOT TRUE.
i = (1 + 2) * 3.
DBNAME.table.field = "hello world".
c = table.field.

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (assignment_expression
      (identifier)
      (integer_literal)))
  (expression_statement
    (assignment_expression
      (identifier)
      (binary_expression
        (integer_literal)
        (integer_literal))))
  (expression_statement
    (assignment_expression
      (identifier)
      (unary_expression
        (true))))
  (expression_statement
    (assignment_expression
      (identifier)
      (binary_expression
        (parenthesized_expression
          (binary_expression
            (integer_literal)
            (integer_literal)))
        (integer_literal))))
  (expression_statement
    (assignment_expression
      (identifier)
      (character_literal)))
  (expression_statement
    (assignment_expression
      (identifier)
      (identifier))))

================================================================================
Unary Expression
================================================================================

-1.
-1 + 3.

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (unary_expression
      (integer_literal)))
  (expression_statement
    (binary_expression
      (unary_expression
        (integer_literal))
      (integer_literal))))
